# carford

./: README.md  pyproject.toml
backend/: .gitignore  asgi.py  manage.py  project.txt  pyproject.toml  requirements.txt  settings.toml  urls.py  wsgi.py
backend/carford/: app.py  asgi.py  models.py  urls.py  wsgi.py
backend/carford/blueprints/restapi/: __init__.py  resources.py
backend/carford/blueprints/webui/: __init__.py  views.py
backend/carford/blueprints/webui/templates/: car.html  index.html  order.html
backend/carford/ext/: admin.py  auth.py  commands.py
backend/carford/settings/: base.py
backend/carford/tests/: conftest.py  test_api.py
backend/settings/: base.py  develop.py
backend/shop/: admin.py  models.py  views.py
backend/shop/api/: serializers.py
backend/shop/migrations/: 0001_initial.py  0002_alter_store_car_alter_store_customer.py
backend/utils/: gen_dotenv.py
shop/: admin.py  models.py  urls.py  views.py
shop/api/: serializers.py
shop/migrations/: 0001_initial.py  0002_alter_car_color_alter_car_model.py  0003_remove_order_car_order_car.py
utils/: gen_dotenv.py
