[tool.poetry]
name = "carford"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.6.0"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
