[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "9.0.1"
asttokens = "2.1.0"
backcall = "0.2.0"
click = "8.1.3"
decorator = "5.1.1"
dominate = "2.7.0"
dynaconf = "3.1.11"
executing = "1.2.0"
Flask = "2.2.2"
Flask-Admin = "1.6.0"
Flask-Bootstrap = "3.3.7.1"
Flask-RESTful = "0.3.9"
flask-shell-ipython = "0.4.1"
flask-simplelogin = "0.1.1"
flask-sqlalchemy = "3.0.2"
Flask-WTF = "0.15.1"
greenlet = "2.0.0"
ipython = "8.6.0"
itsdangerous = "2.1.2"
jedi = "0.18.1"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
matplotlib-inline = "0.1.6"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
prompt-toolkit = "3.0.31"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
Pygments = "2.13.0"
pytz = "2022.6"
six = "1.16.0"
SQLAlchemy = "1.4.42"
SQLAlchemy-serializer = "1.4.1"
stack-data = "0.6.0"
traitlets = "5.5.0"
visitor = "0.1.3"
wcwidth = "0.2.5"
Werkzeug = "2.2.2"
WTForms = "3.0.1"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
Flask-DebugToolbar = "^0.13.1"
black = "^22.10.0"
isort = "^5.10.1"
ipdb = "^0.13.9"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
